# duplicate_finder

./: CMakeLists.txt  README.md  build-release.sh  main.cpp  sha1-C_style.c  sha256-CPP_style.cpp
inspiration/0-at_the_beginning_I_created_shell_script/: remove_duplicate_files_in_current_directory.sh
inspiration/1-then_I_found_how_to_generate_hash_for_file_in_C/: original_code.c
inspiration/2-this_inspired_me_to_experiment_and_rewrite_it_piece_by_piece_into_modern_CPP/: my_edited_code.cpp
inspiration/3-at_the_end_I_ended_up_with_three_variations_of_the_hashing_algorithm/: example_of_usage_of_different_hash_algorithmns.cpp  sha1-C_style-dynamic_allocation-heap.c  sha1-C_style-static_allocation-stack.c  sha256-CPP_style.cpp
inspiration/4-map_exercises/: map_exercises.cpp
inspiration/4-then_I_made_std_map_usage_examples_as_quick_reference/: map_exercises.cpp
src/: Directory.cpp  Directory.h  File.cpp  File.h  Hash.cpp  Hash.h  HashComparatorAscending.h  HashGenerator.cpp  HashGenerator.h  ReportGenerator.cpp  ReportGenerator.h  StringComparatorAscending.h  main.cpp
